feat: Enhance README with SonarCloud badges; refactor repository and service classes for improved readability and maintainability; update test classes for consistency